~fix overlapping of half selected cell in another month by it's range visual

--- a/src/blocks/datepicker/datepicker.scss
+++ b/src/blocks/datepicker/datepicker.scss
@@ -168,8 +168,8 @@ $otherRangeGradient: linear-gradient($gradientDefaultAngle,
   &::before {
     content: "";
     background: $actualRangeGradient;
-    height: $cellSize;
-    width: $cellSize/2;
+    height: 100%;
+    width: 100%;
     position: absolute;
     top: 0;
     z-index: -1;
@@ -180,11 +180,11 @@ $otherRangeGradient: linear-gradient($gradientDefaultAngle,
   }
 
   &.datepicker--cell.-range-from-::before {
-    left: $cellSize/2;
+    border-radius: 50% 0 0 50%;
   }
 
   &.datepicker--cell.-range-to-::before {
-    right: $cellSize/2;
+    border-radius: 0 50% 50% 0;
   }
 }
 
@@ -290,15 +290,12 @@ $yearCellsColumnLength: 3;
   box-shadow: 0 10px 20px $darkShade5;
   border-radius: 4px;
   box-sizing: border-box;
-  //font-family: Tahoma, sans-serif;
   @include text(Montserrat, normal, 12px, 15px, $cellTextColor, normal);
   color: #4a4a4a;
   width: $datepickerWidth;
   position: absolute;
   left: -100000px;
   opacity: 0;
-  transition: opacity 0.3s ease, left 0s 0.3s, -webkit-transform 0.3s ease;
-  transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s;
   transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s, -webkit-transform 0.3s ease;
   z-index: 100;
 }
@@ -451,6 +448,7 @@ $navActionHeight: 18px;
   -webkit-align-items: center;
 
   span {
+    @include text_item-title();
     letter-spacing: -0.8px;
   }
 }
